Redmine issue 995: Specimen Details Edit Dialog Styles;  Accessibility adjustments.  Color contrast -- background visibility of color between monitors and browsers;

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2290,7 +2290,8 @@ section#mediaSection.accordion {
 	background-color: rgb(199 251 255 / .35) !important;
 }
 .bg-paleyellow {
-	background-color: rgba(255, 238, 199, 0.35) !important
+	/*background-color: rgba(255, 238, 199, 0.35) !important; // too light for all browser settings */
+	background-color: rgb(233 204 138 / 35%) !important;
 }
 .height1p2 {
 	height: 1.4rem!important;
